[project]
name = "audio"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "openai-whisper>=20250625",
    "python-multipart>=0.0.21",
    "setuptools<80",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
    "zhconv>=1.4.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
