[project]
name = "whisper-asr"
version = "1.1.2"
description = "基于 OpenAI Whisper 模型的语音识别服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "openai-whisper>=20250625",
    "python-multipart>=0.0.21",
    "setuptools<80",
    "torch==2.9.1",
    "uvicorn>=0.40.0",
    "zhconv>=1.4.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
